--- a/articles.html
+++ b/articles.html
@@ -1398,7 +1398,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire rental unit<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire rental unit<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Kyiv
@@ -1603,7 +1603,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Tower<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Tower<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Tiller
@@ -1804,7 +1804,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire condo<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire condo<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Newport
@@ -2012,7 +2012,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire rental unit<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire rental unit<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Wrocław
@@ -2195,7 +2195,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire condo<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire condo<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Sevierville
@@ -2378,7 +2378,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire home<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire home<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Zuid-Beijerland
@@ -2561,7 +2561,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire rental unit<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire rental unit<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Meiringen
@@ -2748,7 +2748,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire loft<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire loft<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Medellín
@@ -2935,7 +2935,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire rental unit<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire rental unit<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Vercorin
@@ -3118,7 +3118,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire home<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire home<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Gravedona
@@ -3301,7 +3301,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire home<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire home<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Castiglion Fiorentino
@@ -3484,7 +3484,7 @@
                                   <div class="o1n80548 oh3h96u dir dir-ltr" style="--margin-bottom: var(--d-b-mrdy);">
                                    <ol class="lgx66tx dir dir-ltr">
                                     <li class="l7n4lsf dir dir-ltr">
-                                     Entire home<span class="axjq0r dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
+                                     Entire home<span class="hidden dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>
                                     </li>
                                     <li class="l7n4lsf dir dir-ltr">
                                      <span class="pen26si dir dir-ltr"><span class="s1b4clln dir dir-ltr" aria-hidden="true"> · </span></span>Camaiore
