pagination-bullets__container

--- a/articles.html
+++ b/articles.html
@@ -1271,7 +1271,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -1476,7 +1476,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -1681,7 +1681,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -1885,7 +1885,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -2072,7 +2072,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -2255,7 +2255,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -2438,7 +2438,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -2621,7 +2621,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -2808,7 +2808,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -2995,7 +2995,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -3178,7 +3178,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
@@ -3361,7 +3361,7 @@
                                        </span>
                                        <div class="cini325 dir dir-ltr">
                                         <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
-                                         <div class="_szn05y">
+                                         <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
                                            <span class="_1k9ksvh" style="transform: scale(0.833333);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span><span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
