--- a/articles.html
+++ b/articles.html
@@ -1270,7 +1270,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -1475,7 +1475,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -1680,7 +1680,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -1884,7 +1884,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -2071,7 +2071,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -2254,7 +2254,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -2437,7 +2437,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -2620,7 +2620,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -2807,7 +2807,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -2994,7 +2994,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -3177,7 +3177,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
@@ -3360,7 +3360,7 @@
                                         </div>
                                        </span>
                                        <div class="cini325 dir dir-ltr">
-                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="_r752or">
+                                        <div aria-label="Image 1 out of 6 total images of this place" role="img" class="pagination-bullets">
                                          <div class="pagination-bullets__container">
                                           <div class="_1b2klj3" style="transform: translateX(0px);">
                                            <span class="_4o74ccl" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span><span class="_1k9ksvh" style="transform: scale(1);"></span>
