--- a/articles.html
+++ b/articles.html
@@ -1253,7 +1253,7 @@
                                              <source srcset="https://a0.muscache.com/im/pictures/404f6658-e552-4cb1-a756-84ea8ceb22dc.jpg?im_w=720 1x" media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/404f6658-e552-4cb1-a756-84ea8ceb22dc.jpg?im_w=720 1x" media="(min-width: 1439.1px)" />
                                              <img
-                                              class="_6tbg2q"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Image 1"
                                               decoding="async"
@@ -1458,7 +1458,7 @@
                                              <source srcset="https://a0.muscache.com/im/pictures/79856427/29ea43a1_original.jpg?im_w=720 1x" media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/79856427/29ea43a1_original.jpg?im_w=720 1x" media="(min-width: 1439.1px)" />
                                              <img
-                                              class="_6tbg2q"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Image 1"
                                               decoding="async"
@@ -1663,7 +1663,7 @@
                                              <source srcset="https://a0.muscache.com/im/pictures/3b446cc3-55f8-4f59-89fa-da0aeb155eba.jpg?im_w=720 1x" media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/3b446cc3-55f8-4f59-89fa-da0aeb155eba.jpg?im_w=720 1x" media="(min-width: 1439.1px)" />
                                              <img
-                                              class="_6tbg2q"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Image 1"
                                               decoding="async"
@@ -1864,7 +1864,7 @@
                                              <source srcset="https://a0.muscache.com/im/pictures/miso/Hosting-573551901167807310/original/bd442d41-9113-4fff-9d55-26d2a3a3296c.jpeg?im_w=720 1x" media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                              <source srcset="https://a0.muscache.com/im/pictures/miso/Hosting-573551901167807310/original/bd442d41-9113-4fff-9d55-26d2a3a3296c.jpeg?im_w=720 1x" media="(min-width: 1439.1px)" />
                                              <img
-                                              class="_6tbg2q"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Image 1"
                                               decoding="async"
